gitops/apps/outline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      containers:
        - name: outline
          image: docker.getoutline.com/outlinewiki/outline:latest
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /var/lib/outline/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: outline-data
