gitops/apps/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
      appProtocol: kubernetes.io/wss
  selector:
    app: outline
