gitops/apps/outline/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline
  labels:
    probe: enabled
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "doc.bealv.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: outline
          port: 3000
