gitops/apps/outline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
  annotations:
    cert-manager.io/cluster-issuer: bealvio
    external-dns.alpha.kubernetes.io/target: bealv.io
    projectcontour.io/websocket-routes: /
  labels:
    probe: enabled
spec:
  ingressClassName: external
  rules:
    - host: 'doc.bealv.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline
                port:
                  number: 3000
  tls:
    - hosts:
        - 'doc.bealv.io'
      secretName: outline-tls
